# hohl-rocks-back

./: .env.example  Dockerfile  RAILWAY-SETUP.md  README.md  env.example  pyproject.toml  requirements.txt
api/: Dockerfile  package.json
api/server/: index.js  news.js  prompts.js  research.js  router.bubbles.js  server.js  share.llm.js
backend/: config.py  ingest.py  scheduler.py
