[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hohlrocks-ingest"
version = "1.4.2"
description = "Async APScheduler job for hohl.rocks news ingestion"
authors = [{name="Wolf Hohl", email="-" }]
requires-python = ">=3.10"
dependencies = [
  "apscheduler>=3.10.4",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "python-dateutil>=2.9.0.post0"
]

[project.scripts]
hohlrocks-ingest = "backend.scheduler:main"
